name:                hs-digems
version:             0.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE.md
author:              Victor Miraldo
maintainer:          v.cacciarimiraldo@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Data.Digems.Change
                 , Data.Digems.Change.Apply
                 , Data.Digems.Change.Classify
                 , Data.Digems.Change.Thinning
                 , Data.Digems.Change.TreeEditDistance
                 , Data.Digems.Example
                 , Data.Digems.MetaVar
                 , Data.Digems.Patch
                 , Data.Digems.Patch.Diff
                 , Data.Digems.Patch.Merge
                 , Data.Digems.Patch.Preprocess
                 , Data.Digems.Patch.Show
                 , Data.Digems.Patch.Thinning
                 , Data.Digems.Patch.TreeEditDistance
                 , Data.Exists
                 , Data.WordTrie
                 , Generics.MRSOP.Digems.Digest
                 , Generics.MRSOP.Digems.Renderer
                 , Generics.MRSOP.Digems.Treefix
                 , Languages.RTree
                 , Languages.RTree.Diff
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5
               ,       generics-mrsop >= 2.1.0
               ,       generics-mrsop-gdiff
               ,       bytestring
               ,       cryptonite
               ,       memory
               ,       containers
               ,       mtl
               ,       prettyprinter
               ,       prettyprinter-ansi-terminal
               ,       text
               ,       QuickCheck
               ,       hspec

  hs-source-dirs:      src
  default-language:    Haskell2010

executable digem
  default-language:    Haskell2010
  hs-source-dirs:      executables
  main-is:             Digem.hs
  other-modules:       Languages.While
               ,       Languages.Lua
               ,       Languages.ELisp
               ,       Languages.Interface
               ,       Languages.Clojure
               ,       Languages.Clojure.AST
               ,       Languages.Clojure.Parser
               ,       Languages.Lines
  build-depends:       base >=4.10 && <5
               ,       generics-mrsop
               ,       generics-mrsop-gdiff
               ,       hs-digems
               ,       parsec
               ,       cmdargs
               ,       gitrev
               ,       prettyprinter
               ,       text 
               ,       language-lua
               ,       hs-elisp
               ,       mtl
               ,       QuickCheck

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:       Spec.hs
  other-modules: Data.Digems.PatchSpec
               , Data.Digems.Patch.DiffSpec
               , Data.Digems.Patch.MergeSpec
               , Data.Digems.Patch.ThinningSpec
               , Data.Digems.Change.ClassifySpec
               , Data.Digems.Change.TreeEditDistanceSpec
  build-depends: base >= 4.10 && <5
               , hs-digems
               , generics-mrsop-gdiff
               , generics-mrsop
               , QuickCheck
               , hspec
               , containers
               , mtl
